# PixelAtlas

./: .clangd  .gitignore  Cmakelists.txt  ToDoList.md  all-steps.json  pipeline.json  readme.md
docs/: 进程级并行参考.md  项目用词.md
docs/已移除的可参考代码/CGAL的Dijkstra算法接口/: FindShortestDistanceOnMesh3.cpp  FindShortestDistanceOnMesh3.h
docs/已移除的可参考代码/CGAL的网格AABBTree计算/: CGALMeshAABB.md
docs/已移除的可参考代码/线程级并行/: thread_parallel_executor.cpp  thread_parallel_executor.h
pa-algorithm/: Cmakelists.txt
pa-algorithm/EfficientBijectiveParameterization/: BiljectivePara.cpp  BiljectivePara.h  Cmakelists.txt  Common.cpp  Common.h  Parafun.cpp  Parafun.h  ShellData.cpp  ShellData.h  TriangleInterface.h  main.cpp
pa-algorithm/EfficientBijectiveParameterization/LinSysSolver/: EigenLinSolver.cpp  LinSysSolver.hpp
pa-controller/: CMakeLists.txt  ToDoList.md
pa-controller/evaluator/: CMakeLists.txt  evaluator.cpp  evaluator.h  main.cpp
pa-controller/frame/: CMakeLists.txt  assert.hpp  command_structures.h  common_program.cpp  common_program.h  debug.cpp  debug.h  global_defs.cpp  global_defs.h  global_static.cpp  global_static.h  io.cpp  io.h  metric.cpp  metric.h  parse.cpp  parse.h  process_parallel_executor.cpp  process_parallel_executor.h  thread_parallel_executor.cpp  thread_parallel_executor.h  thread_parallel_processor.cpp  thread_parallel_processor.h  线程级并行参考.md  线程级并行参考2.md
pa-controller/launcher/: CmakeLists.txt  launcher.cpp
pa-controller/metric_evaluator/: CMakeLists.txt  evaluator.cpp  evaluator.h  main.cpp  metric_io.cpp  metric_io.h
pa-interface/: Cmakelists.txt
pa-interface/CGAL-Interface/: CGAL-Interface.cpp  Cmakelists.txt
pa-interface/CGALMeshInterface/: Cmakelists.txt
pa-interface/LinSysSolver-Interface/: EigenLinSolver.cpp  EigenLinSolver.h  MKLPardisoSolver.h
pa-interface/LinSysSolverInterface/: Cmakelists.txt  Solver.h
pa-interface/OpenMesh-Interface/: MeshDefinition.cpp  MeshDefinition.h
pa-interface/Triangle-Interface/: TriangleInterface.cpp
pa-interface/TriangleInterface/: Cmakelists.txt  TriangleInterface.cpp  TriangleInterface.h
pa-note/: ddd  正则表达式使用.md  进程级并行参考.md
pa-script/cmake/: paths.cmake  vars.cmake
pa-script/etc/: generate.py  reset_compile_commands.py
pa-steps/: CMakeLists.txt
pa-steps/Pixelation/: CMakeLists.txt  main.cpp  process.cpp
pa-steps/Preprocess/: CMakeLists.txt  main.cpp  preprocess.cpp  preprocess.h  process.cpp  process.h
pa-steps/common/: CmakeLists.txt
pa-steps/common/CGALMeshInterface/: CGALMeshInterface.cpp  CGALMeshInterface.h
script/cmake/: functions.cmake  paths.cmake  vars.cmake
script/etc/: reset_compile_commands.py
source/algorithm/: Cmakelists.txt
source/algorithm/AlgoKit/: BasicGeometry.cpp  BasicGeometry.h  BoundaryLoop.cpp  BoundaryLoop.h  Cmakelists.txt  IntersectionDetection2D.cpp  IntersectionDetection2D.h  MeshDijkstraWithCache.cpp  MeshDijkstraWithCache.h
source/algorithm/EfficientBijectiveParameterization/: BiljectivePara.cpp  BiljectivePara.h  Cmakelists.txt  ParaFun.cpp  ShellData.cpp  ShellData.h  Utility.cpp  Utility.h
source/algorithm/HierarchicalPixelGrid/: Cmakelists.txt  HierarchicalPixelGrid.cpp  HierarchicalPixelGrid.h
source/controller/evaluator/: CMakeLists.txt  evaluator.cpp  evaluator.h  main.cpp
source/controller/frame/: CMakeLists.txt  action_args.cpp  action_args.h  action_arguments.h  assert.hpp  common_program.cpp  common_program.h  global_args.cpp  global_args.h  global_defs.cpp  global_defs.h  io.cpp  io.h  metric.cpp  metric.h  pa_assert.hpp  parse.cpp  parse.h  process_parallel_executor.cpp  process_parallel_executor.h
source/controller/launcher/: CmakeLists.txt  launcher.cpp
source/interface/: Cmakelists.txt
source/interface/CGAL-Interface/: CGAL-Interface.cpp  CGAL-Interface.h  Cmakelists.txt
source/interface/LinSysSolver-Interface/: Cmakelists.txt  EigenLinSolver.h  MKLPardisoSolver.cpp  MKLPardisoSolver.h  Solver.h
source/interface/OpenMesh-Interface/: Cmakelists.txt  MeshDefinition.h
source/interface/Triangle-Interface/: Cmakelists.txt  TriangleInterface.cpp  TriangleInterface.h
source/pipeline/: CMakeLists.txt
source/pipeline/Dissection/: CMakeLists.txt  grid_dissector.cpp  grid_dissector.h  main.cpp  process.cpp
source/pipeline/GutterGeneration/: main.cpp
source/pipeline/GutterGeneraton/: CMakeLists.txt
source/pipeline/Pixelation/: CMakeLists.txt  naive_pixelator.cpp  naive_pixelator.h  process.cpp
source/pipeline/Preprocess/: CMakeLists.txt  process.cpp
